--- a/journal.html
+++ b/journal.html
@@ -2,82 +2,105 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>راز گشوده شد</title>
+  <title>دفتر خاطرات</title>
   <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Vazir', sans-serif;
-      background: linear-gradient(rgba(60, 43, 28, 0.7), rgba(60, 43, 28, 0.8)),
-                  url('https://i.imgur.com/vDuMTJG.jpg') no-repeat center center fixed;
+      background: url('https://i.imgur.com/FjMpkeG.jpg') no-repeat center center fixed;
       background-size: cover;
+      font-family: 'Vazir', sans-serif;
       direction: rtl;
-      text-align: center;
       margin: 0;
       padding: 0;
-      color: #2e1b13;
-      animation: fadeIn 2s ease;
+      color: #2c1e13;
     }
 
-    .container {
-      max-width: 700px;
-      margin: 100px auto;
-      background-color: rgba(255, 250, 240, 0.95);
-      padding: 60px 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 40px rgba(0,0,0,0.4);
+    .overlay {
+      background-color: rgba(255, 248, 230, 0.9);
+      max-width: 800px;
+      margin: 70px auto;
+      padding: 60px 50px;
+      border-radius: 18px;
+      box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
       position: relative;
-      overflow: hidden;
+      line-height: 2.5;
+      font-size: 18px;
     }
 
-    .container::before {
+    .overlay::before {
       content: "";
       position: absolute;
-      top: -30px;
-      left: -30px;
-      width: 100%;
-      height: 100%;
-      background: url('https://i.imgur.com/Z4zwkpH.png') no-repeat;
+      top: -40px;
+      right: -40px;
+      width: 100px;
+      height: 100px;
+      background: url('https://i.imgur.com/OQfM3zD.png') no-repeat;
       background-size: contain;
       opacity: 0.08;
-      pointer-events: none;
     }
 
-    h1 {
-      font-size: 36px;
-      margin-bottom: 30px;
-      color: #4b2e1d;
+    h2 {
+      text-align: center;
+      font-size: 24px;
+      margin-bottom: 40px;
+      color: #4e3a28;
     }
 
-    p {
-      font-size: 20px;
-      line-height: 2.1;
-      color: #3a2a20;
+    .handwriting {
+      font-family: 'Vazir', sans-serif;
+      white-space: pre-line;
     }
 
-    .quote {
-      margin-top: 40px;
-      font-style: italic;
-      font-size: 18px;
-      color: #5a4032;
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
+    @media (max-width: 768px) {
+      .overlay {
+        margin: 30px 15px;
+        padding: 30px 20px;
+        font-size: 16px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>راز گشوده شد...</h1>
-    <p>
-      تو به آنچه بسیاری نمی‌رسند، رسیدی.<br>
-      «اصرار فاش می‌شوند» فقط یک رمز نبود، بلکه کلید دروازه‌ای بود به خاطراتی محو در مه زمان...<br><br>
-      در سکوت، حقیقت نهفته‌ست. و تو، آن را شنیدی.
-    </p>
-    <div class="quote">
-      "هر رازی، روزی راهی به نور می‌جوید..."
+  <div class="overlay">
+    <h2>۱۹ اکتبر ۲۰۰۰ – ساعت ۳:۴۵ ظهر</h2>
+    <div class="handwriting">
+همین چند دقیقه پیش بود که مثل همیشه، توی حیاط پشت خونه نشسته بودم؛ قلم‌مو توی دستم، بومِ سفید رو به روی من، و اون تصویری که هیچ‌وقت کامل نمی‌شه.
+این تصویر، چهره نداره...
+چهره‌ش هیچ‌وقت توی ذهنم شکل نگرفت.
+شاید چون هیچ‌وقت اجازه نداد ببینمش.
+شاید چون همیشه، دقیقاً از همون فاصله‌ای نگاهم می‌کرد که یک قدم جلوتر، همه چیز لو می‌رفت.
+انگار می‌دونه چقدر باید دور بمونه...
+و من هنوز نمی‌دونم از کجا می‌فهمه.
+وقتی امروز داشتم با نوک قلم، سایه‌های تیره روی بوم  می‌کشیدم، برای اولین بار به وضوح دیدمش.
+پشت درخت، آن‌سوی خیابون.
+ایستاده بود.
+آروم، بدون حرکت.
+موهای بلندش مثل پر کلاغ، در باد تکون می‌خورد و قد بلندش...
+فقط همین دوتا چیز بودن که از دور به چشم می‌اومدن،
+و برای من، همین دو تکه‌ی گنگ، تمامش بودن.
+دستم برای لحظه‌ای از روی بوم جدا شد.
+نه از ترس،
+از تکرار.
+چند وقته داره دنبال می‌کنه منو؟ چند هفته؟ چند ماه؟
+نمی‌دونم. فقط می‌دونم که هنوز به کسی چیزی نگفتم.
+حتی به استیو.
+امروز زودتر برمی‌گرده خونه...
+باید نقاشی رو قایم کنم.
+نمی‌خوام ببینه.
+نمی‌خوام بدونه.
+اون فقط الکی نگران میشه، شروع می‌کنه به محافظت کردن، کنترل کردن...
+مثل همیشه.
+خودم می‌تونم از پسش بربیام... فقط یه سایه‌ست، نه؟
+فقط یه مرد پشت درخت.
+نه صدا، نه چهره.
+فقط سکوت و سیاهی.
+خب، دیگه وقتشه بلند شم.
+رنگ روی دست‌هام خشک شده.
+همه‌چی باید مثل همیشه به نظر بیاد.
+امشب نباید چیزی عوض بشه.
+نه برای استیو،
+نه برای من.
     </div>
   </div>
 
