--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <script>
     function checkCode() {
-      const correctCode = "اصرار فاش می شوند";
+      const correctCode = "اسرار فاش میشوند";
       const userInput = document.getElementById("codeInput").value.trim();
       const errorText = document.getElementById("errorText");
 
