--- a/index.html
+++ b/index.html
@@ -15,18 +15,11 @@
       direction: rtl;
       text-align: center;
       color: #fff;
-    }
-
-    /* ویدیو پس‌زمینه */
-    #bgVideo {
-      position: fixed;
-      top: 0;
-      right: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
-      filter: brightness(0.3) grayscale(0.4);
+      background-image: url('https://wallpapercave.com/wp/wp11136708.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
 
     .box {
@@ -81,12 +74,6 @@
   </style>
 </head>
 <body>
-
-  <!-- ویدیوی پس‌زمینه -->
-  <video autoplay muted loop id="bgVideo">
-    <source src="https://videos.pexels.com/video-files/6014535/6014535-uhd_2732_1440_24fps.mp4" type="video/mp4">
-    مرورگر شما از پخش این ویدیو پشتیبانی نمی‌کند.
-  </video>
 
   <!-- جعبه قفل -->
   <div class="box">
