--- a/journal.html
+++ b/journal.html
@@ -16,32 +16,24 @@
     }
 
     .overlay {
-      background-color: rgba(255, 248, 230, 0.9);
+      background: url('https://e1.pxfuel.com/desktop-wallpaper/914/855/desktop-wallpaper-aged-paper-backgrounds-old-paper.jpg') no-repeat center center;
+      background-size: cover;
       max-width: 800px;
       margin: 70px auto;
       padding: 60px 50px;
-      border-radius: 18px;
-      box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
       position: relative;
-      line-height: 2.5;
-      font-size: 18px;
+      line-height: 2.8;
+      font-size: 20px;
+      color: #2c1e13;
     }
 
     .overlay::before {
-      content: "";
-      position: absolute;
-      top: -40px;
-      right: -40px;
-      width: 100px;
-      height: 100px;
-      background: url('https://i.imgur.com/OQfM3zD.png') no-repeat;
-      background-size: contain;
-      opacity: 0.08;
+      display: none;
     }
 
     h2 {
       text-align: center;
-      font-size: 24px;
+      font-size: 26px;
       margin-bottom: 40px;
       color: #4e3a28;
     }
@@ -55,7 +47,7 @@
       .overlay {
         margin: 30px 15px;
         padding: 30px 20px;
-        font-size: 16px;
+        font-size: 18px;
       }
     }
   </style>
