--- a/journal.html
+++ b/journal.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet">
   <style>
     body {
-      background: url('https://i.imgur.com/FjMpkeG.jpg') no-repeat center center fixed;
+      background: url('https://e1.pxfuel.com/desktop-wallpaper/914/855/desktop-wallpaper-aged-paper-backgrounds-old-paper.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Vazir', sans-serif;
       direction: rtl;
@@ -16,13 +16,12 @@
     }
 
     .overlay {
-      background: url('https://e1.pxfuel.com/desktop-wallpaper/914/855/desktop-wallpaper-aged-paper-backgrounds-old-paper.jpg') no-repeat center center;
-      background-size: cover;
+      background: none;
       max-width: 800px;
       margin: 70px auto;
       padding: 60px 50px;
       position: relative;
-      line-height: 2.8;
+      line-height: 1.9;
       font-size: 20px;
       color: #2c1e13;
     }
